<?xml version="1.0"?>
<package>
  <name>localization</name>
  <version>0.0.0</version>
  <description>The localization package</description>


  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>robot_msgs</build_depend>
  <run_depend>robot_msgs</run_depend>
  <build_depend>rosbag</build_depend>
  <run_depend>rosbag</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
